Updated client tools. Added LDAP-JDBC example.